--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 攀峰说
 SEOTitle: 攀峰说 - 让世界更美好
-header-img: img/post-bg-desk.jpg
+header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
 email: klovien@gmail.com
 description: "中西融合, 即学即会, 从此不再辛苦背单词"
 keyword: "人工语言, 国际语, 世界语, 三叶草国际语, 三叶语"
