--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 攀峰说
 SEOTitle: 攀峰说 - 让世界更美好
 header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
 email: klovien@gmail.com
-description: "中西融合, 即学即会, 从此不再辛苦背单词"
+description: "思考-总结-输出-再思考"
 keyword: "人工语言, 国际语, 世界语, 三叶草国际语, 三叶语"
 url: "https://klovien.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
