--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
 email: klovien@gmail.com
 description: "思考-总结-输出-再思考"
 keyword: "人工语言, 国际语, 世界语, 三叶草国际语, 三叶语"
-url: "https://klovien.github.io"          # your host, for absolute URL
+url: "https://lpanfeng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/klovien/klovien.github.io.git" # you code repository
+github_repo: "https://github.com/lpanfeng/lpanfeng.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
