--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 攀峰说 - 让世界更美好
 header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
 email: klovien@gmail.com
 description: "思考-总结-输出-再思考"
-keyword: "人工语言, 国际语, 世界语, 三叶草国际语, 三叶语"
+keyword: "微信公众号：攀峰说"
 url: "https://lpanfeng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/lpanfeng/lpanfeng.github.io.git" # you code repository
