--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 攀峰说
 SEOTitle: 攀峰说 - 让世界更美好
 header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
-email: klovien@gmail.com
+email: panfeng_liu@163.com
 description: "思考-总结-输出-再思考"
 keyword: "微信公众号：攀峰说"
 url: "https://lpanfeng.github.io"          # your host, for absolute URL
