--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 攀峰说
 SEOTitle: 攀峰说 - 让世界更美好
 header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
 email: panfeng_liu@163.com
-description: "思考-总结-输出-再思考"
+description: "霹雳吧啦"
 keyword: "微信公众号：攀峰说"
 url: "https://lpanfeng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
