--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: 攀峰说
+title: 攀峰说1111
 SEOTitle: 攀峰说 - 让世界更美好
 header-img: img/andrew-small-EfhCUc_fjrU-unsplash.jpg
 email: panfeng_liu@163.com
-description: "霹雳吧啦"
+description: "霹雳吧啦1111"
 keyword: "微信公众号：攀峰说"
 url: "https://lpanfeng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
